apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'application'

archivesBaseName = 'todo-backend'
version = '0.1.0-SNAPSHOT'

sourceCompatibility = 15
targetCompatibility = 15

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url = 'https://oss.sonatype.org/content/repositories/snapshots'
  }
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.addAll('--enable-preview')
}

test {
  useJUnitPlatform()
  
  jvmArgs(['--enable-preview'])
}

javadoc.options {
    addBooleanOption('-enable-preview', true)
    addStringOption('-release', '15')
}

dependencies {
  implementation 'com.github.tonivade:purefun-monad:2.2-SNAPSHOT'
  implementation 'com.github.tonivade:purefun-effect:2.2-SNAPSHOT'
  implementation 'com.github.tonivade:purefun-instances:2.2-SNAPSHOT'
  implementation 'com.github.tonivade:zeromock-server:0.14.0-SNAPSHOT'
  implementation 'com.github.tonivade:puredbc:0.2.0-SNAPSHOT'
  implementation 'com.github.tonivade:purecfg:0.2.0-SNAPSHOT'
  implementation 'com.github.tonivade:purejson:0.1.0-SNAPSHOT'
  implementation 'com.zaxxer:HikariCP:3.4.2'
  implementation 'org.flywaydb:flyway-core:5.2.4'
  runtime 'com.h2database:h2:1.4.200'
  testImplementation 'com.github.tonivade:zeromock-junit5:0.14.0-SNAPSHOT'
  testImplementation 'com.github.tonivade:zeromock-client:0.14.0-SNAPSHOT'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
  testImplementation 'org.junit.platform:junit-platform-runner:1.7.0'
  testImplementation 'org.mockito:mockito-core:3.5.11'
  testImplementation 'org.mockito:mockito-junit-jupiter:3.5.11'
}

application {
  mainClassName = 'com.github.tonivade.todo.Application'
}

task fatJar(type: Jar) {
  manifest {
    attributes "Main-Class": "com.github.tonivade.todo.Application"
  }
  archiveClassifier = "all"
  from {
    configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
  with jar
}
